; ModuleID = '/home/carl/AnghaBench/linux/arch/um/drivers/extr_vector_transports.c_build_bess_transport_data.c'
source_filename = "/home/carl/AnghaBench/linux/arch/um/drivers/extr_vector_transports.c_build_bess_transport_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vector_private = type { i64, i64, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vector_private*)* @build_bess_transport_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @build_bess_transport_data(%struct.vector_private* %0) #0 {
  %2 = alloca %struct.vector_private*, align 8
  store %struct.vector_private* %0, %struct.vector_private** %2, align 8
  %3 = load %struct.vector_private*, %struct.vector_private** %2, align 8
  %4 = getelementptr inbounds %struct.vector_private, %struct.vector_private* %3, i32 0, i32 3
  store i32* null, i32** %4, align 8
  %5 = load %struct.vector_private*, %struct.vector_private** %2, align 8
  %6 = getelementptr inbounds %struct.vector_private, %struct.vector_private* %5, i32 0, i32 2
  store i32* null, i32** %6, align 8
  %7 = load %struct.vector_private*, %struct.vector_private** %2, align 8
  %8 = getelementptr inbounds %struct.vector_private, %struct.vector_private* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.vector_private*, %struct.vector_private** %2, align 8
  %10 = getelementptr inbounds %struct.vector_private, %struct.vector_private* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
